--- a/package.json
+++ b/package.json
@@ -3,9 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@devexpress/dx-react-chart": "^2.0.1",
-    "@devexpress/dx-react-chart-material-ui": "^2.0.1",
-    "@devexpress/dx-react-core": "^2.0.1",
     "@material-ui/core": "^4.2.1",
     "@material-ui/icons": "^4.2.1",
     "@material-ui/styles": "^4.2.1",
@@ -20,6 +17,7 @@
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-google-charts": "^3.0.14",
     "react-infinite-scroll-component": "^4.5.2",
     "react-jss": "^8.6.1",
     "react-moment": "^0.8.4",
